fix: remove duplicate head tags and fix letter spacing on copy

--- a/modules/shared/components/QRCard/styles.module.css
+++ b/modules/shared/components/QRCard/styles.module.css
@@ -31,7 +31,7 @@
 .copy {
   font-size: 0.9375rem;
   color: var(--grayishBlue);
-
+  letter-spacing: 0.011875rem;
 
   padding-inline: 16px;
 }
